--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "eslint-plugin-unicorn": "^38.0.1"
   },
   "dependencies": {
-    "joi": "^17.4.2"
+    "axios": "^0.24.0",
+    "joi": "^17.4.2",
+    "lodash": "^4.17.21"
   }
 }
