--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,3 @@
 {
-  "extends": ["standard", "plugin:unicorn/recommended"]
+  "extends": ["standard", "plugin:unicorn/recommended", "plugin:jsdoc/recommended"]
 }
