feat: implement getSmsLog function and implement request-wrapper

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": {
     "name": "Aykut Kırcan",
     "email": "aykutkircan@icloud.com",
-    "github": ""
+    "github": "https://github.com/aykutkircan"
   },
   "contributors": [
     {
